--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lucide-react": "^0.294.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18",
