--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
+    "openai": "^4.24.2",
     "prettier": "^3.1.0",
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
