--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
+    "npm-check-updates": "^16.14.12",
     "openai": "^4.24.2",
     "prettier": "^3.1.0",
     "prismjs": "^1.29.0",
